--- a/src/app/main/main/main.component.html
+++ b/src/app/main/main/main.component.html
@@ -1,6 +1,3 @@
-<app-main-menu>
-    <app-product-menu></app-product-menu>
-</app-main-menu>
-<app-main-content>
-    <app-product-list></app-product-list>
-</app-main-content>
+<div class="main">
+    <ng-content></ng-content>
+</div>
