--- a/src/app/product/product-list/product-list.component.scss
+++ b/src/app/product/product-list/product-list.component.scss
@@ -1,10 +1,24 @@
 .product-list {
 
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 
     &__card {
+        display: flex;
+        flex-direction: column;
         width: 100%;
         max-width: 200px;
         margin: 20px;
+
+        &-header {
+            display: flex;
+            flex-direction: column;
+        }
+
+        &-content {
+            display: flex;
+            flex-direction: column;
+        }
     }
 }
