--- a/src/app/product/product-filter/product-filter.component.html
+++ b/src/app/product/product-filter/product-filter.component.html
@@ -1,13 +1,15 @@
 <form [formGroup]="productFilterForm" class="product__filter">
   <mat-form-field class="product__filter-field" appearance="outline">
-    <mat-label for="name" class="product__filter-label">Name: </mat-label>
+    <mat-label for="name" class="product__filter-label">Name</mat-label>
     <input matInput type="text" formControlName="name" class="product__filter-input">
   </mat-form-field>
-  <mat-form-field  class="product__filter-field" appearance="outline">
-  <mat-label for="category"  class="product__filter-label">Category: </mat-label>
+  <mat-form-field  class="product__filter-field">
+  <mat-label for="category"  class="product__filter-label">Category </mat-label>
     <mat-select type="text" formControlName="category" class="product__filter-input">
       <mat-option>-- None --</mat-option>
-      <mat-option value="option">Option</mat-option>
+      <mat-option value="{{ category.name }}" *ngFor="let category of categories">
+        {{ category.name }}
+      </mat-option>
     </mat-select>
   </mat-form-field>
 </form>
