--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -1,9 +1,6 @@
 <div class="product-list">
-    <mat-card *ngFor="let product of products" class="product-list__card">
-        <mat-card-header color="primary"  class="product-list__card-header">{{ product.name  }}</mat-card-header>
-        <mat-card-content   class="product-list__card-content">
-            <p>Price: {{ product.price }}</p>
-            <p>Category: {{ product.category }}</p>
-        </mat-card-content>
-    </mat-card>
+    <app-product-item *ngFor="let product of products"
+     [product]="product"
+     class="product-list__card">
+    </app-product-item>
 </div>
