--- a/src/app/product/product-filter/product-filter.component.scss
+++ b/src/app/product/product-filter/product-filter.component.scss
@@ -4,6 +4,7 @@
         flex-wrap: wrap;
         flex-direction: column;
         align-items: center;
+        width: 100%;
 
         &-input {
             display: flex;
