--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -1,6 +1,7 @@
 <div class="product-list">
     <app-product-item *ngFor="let product of products"
-     [product]="product"
-     class="product-list__card">
+                      [product]="product"
+                      class="product-list__card">
     </app-product-item>
+    <p *ngIf="productNotFound" class="product-list__text_not-found">Products not found</p>
 </div>
