--- a/src/app/product/product-menu/product-menu.component.html
+++ b/src/app/product/product-menu/product-menu.component.html
@@ -1,7 +1,9 @@
-<button mat-button color="primary">
-    <a href="/">Home</a>
-</button>
-<button mat-button color="primary"
- *ngFor="let category of categories">
-    <a href="category/{{ category.id }}">{{ category.name }}</a>
-</button>
+<div class="product-menu">
+    <button mat-button color="primary">
+        <a href="/">Home</a>
+    </button>
+    <button mat-button color="primary"
+     *ngFor="let category of categories">
+        <a href="category/{{ category.id }}">{{ category.name }}</a>
+    </button>
+</div>
