--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -3,6 +3,7 @@
         <app-product-menu></app-product-menu>
     </app-main-menu>
     <app-main-content>
+        <app-product-cart></app-product-cart>
         <app-product-filter></app-product-filter>
         <app-product-list></app-product-list>
     </app-main-content>
