--- a/src/app/product/product-cart/product-cart.component.html
+++ b/src/app/product/product-cart/product-cart.component.html
@@ -1,2 +1,5 @@
-<p>product-cart works!</p>
-<p>{{ productCart$ | async}}</p>
+<div class="product-cart">
+    <button class="product-cart__button" mat-stroked-button>Cart</button>
+    <p>total items: {{ productCartTotalCount}}</p>
+    <p>total price: {{ productCartTotalPrice }}</p>
+</div>
