--- a/src/app/product/product-item/product-item.component.html
+++ b/src/app/product/product-item/product-item.component.html
@@ -1,5 +1,7 @@
 <mat-card class="product-item">
-    <mat-card-header color="primary"  class="product-item__header">{{ product.name  }}</mat-card-header>
+    <button mat-stroked-button (click)="handleAddClick()">+</button>
+    <button mat-stroked-button (click)="handleRemoveClick()">-</button>
+    <mat-card-header color="primary" class="product-item__header">{{ product.name  }}</mat-card-header>
     <mat-card-content   class="product-item__content">
         <p>Price: {{ product.price }}</p>
         <p>Category: {{ product.category }}</p>
