first minimal working version

--- a/src/app/product/product-cart/product-cart.component.html
+++ b/src/app/product/product-cart/product-cart.component.html
@@ -1,5 +1,5 @@
 <div class="product-cart">
-    <button class="product-cart__button" mat-stroked-button>Cart</button>
+    <p>Cart</p>
     <p>total items: {{ productCartTotalCount}}</p>
     <p>total price: {{ productCartTotalPrice }}</p>
 </div>
